tests/snapshots/parser_test__snapshot_list.snap
---
source: tests/parser_test.rs
expression: result.tokens
---
[
    Token {
        word: "First",
        style: Normal,
        block: ListItem(
            1,
        ),
        parent_context: None,
        timing_hint: TimingHint {
            word_length_modifier: 0,
            punctuation_modifier: 0,
            structure_modifier: 75,
            is_cell_start: false,
            table_column: None,
            is_block_start: true,
        },
    },
    Token {
        word: "item",
        style: Normal,
        block: ListItem(
            1,
        ),
        parent_context: None,
        timing_hint: TimingHint {
            word_length_modifier: 0,
            punctuation_modifier: 0,
            structure_modifier: 0,
            is_cell_start: false,
            table_column: None,
            is_block_start: false,
        },
    },
    Token {
        word: "Second",
        style: Normal,
        block: ListItem(
            1,
        ),
        parent_context: None,
        timing_hint: TimingHint {
            word_length_modifier: 0,
            punctuation_modifier: 0,
            structure_modifier: 75,
            is_cell_start: false,
            table_column: None,
            is_block_start: true,
        },
    },
    Token {
        word: "item",
        style: Normal,
        block: ListItem(
            1,
        ),
        parent_context: None,
        timing_hint: TimingHint {
            word_length_modifier: 0,
            punctuation_modifier: 0,
            structure_modifier: 0,
            is_cell_start: false,
            table_column: None,
            is_block_start: false,
        },
    },
    Token {
        word: "Third",
        style: Normal,
        block: ListItem(
            1,
        ),
        parent_context: None,
        timing_hint: TimingHint {
            word_length_modifier: 0,
            punctuation_modifier: 0,
            structure_modifier: 75,
            is_cell_start: false,
            table_column: None,
            is_block_start: true,
        },
    },
    Token {
        word: "item",
        style: Normal,
        block: ListItem(
            1,
        ),
        parent_context: None,
        timing_hint: TimingHint {
            word_length_modifier: 0,
            punctuation_modifier: 0,
            structure_modifier: 0,
            is_cell_start: false,
            table_column: None,
            is_block_start: false,
        },
    },
]
