tests/snapshots/parser_test__snapshot_simple_doc-2.snap
---
source: tests/parser_test.rs
expression: result.sections
---
[
    Section {
        title: "Hello",
        level: 1,
        token_start: 0,
        token_end: 7,
    },
    Section {
        title: "World",
        level: 2,
        token_start: 7,
        token_end: 10,
    },
]
